<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20sp"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/available_language"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/downloadedModels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/downloaded_models_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/buttonSyncSource"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textOff="@string/download_model"
            android:textOn="@string/delete_model"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/buttonSwitchLang"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_compare_color" />

        <ToggleButton
            android:id="@+id/buttonSyncTarget"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textOff="@string/download_model"
            android:textOn="@string/delete_model"
            android:textSize="11sp" />
    </LinearLayout>

</LinearLayout>